# trident

./: README.md  pyproject.toml
style/: dark_theme.scss
trident/: __main__.py
trident/model/: model.py
trident/ui/: dark_theme.qss  main.ui  presenter.py  view.py
trident/ui/color_button/: view.py
trident/ui/file_line_edit/: view.py
trident/ui/lines_table/: model.py
trident/ui/plot_widget/: view.py
trident/utils/: property.py
